k8s/overlays/shokohsc/development.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: ouistity
spec:
  template:
    spec:
      containers:
        - name: ouistity
          volumeMounts:
            - name: nfs-shared
              mountPath: /usr/app/assets/data/archives/weekly
      volumes:
        - name: nfs-shared
          nfs:
            server: nfs-shared.nfs-shared
            path: /weekly
