k8s/overlays/shokohsc/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redis-commander
  annotations:
    kubernetes.io/ingress.class: nginx
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: ca-cluster-issuer
    dashboard.shokohsc.home/name: ouistity-redis
    dashboard.shokohsc.home/url: https://redis.ouistity.shokohsc.home
    dashboard.shokohsc.home/icon: wrench
spec:
  rules:
  - host: redis.ouistity.shokohsc.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: redis-commander
            port:
              number: 80
  tls:
  - hosts:
    - redis.ouistity.shokohsc.home
    secretName: redis-commander-cert
