k8s/overlays/shokohsc/redis-commander.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redis-commander
  labels:
    app.kubernetes.io/name: redis-commander
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: redis-commander
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-commander
  labels:
    app.kubernetes.io/name: redis-commander
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: redis-commander
  template:
    metadata:
      labels:
        app.kubernetes.io/name: redis-commander
    spec:
      containers:
        - name: redis-commander
          image: rediscommander/redis-commander
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8081
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            requests:
              cpu: 10m
              memory: 64M
            limits:
              cpu: 100m
              memory: 64M
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redis-commander
  annotations:
    kubernetes.io/ingress.class: nginx
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: ca-cluster-issuer
    flame.pawelmalak/name: ouistity-redis
    flame.pawelmalak/url: redis.ouistity.shokohsc.home
    flame.pawelmalak/type: app
    flame.pawelmalak/icon: wrench
spec:
  rules:
  - host: redis.ouistity.shokohsc.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: redis-commander
            port:
              number: 80
  tls:
  - hosts:
    - redis.ouistity.shokohsc.home
    secretName: redis-commander-cert
